--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -106,7 +106,14 @@
   
   .Logo {
 	  text-align: center;
-	  background-color: #fff;
+	  background-color: #4182e4;
+	  color: #ffffff;
+  }
+  #acronym {
+	font-size: 10vw;
+  }
+  #words {
+	  font-size: 2vw;
   }
   /* Image Carousel Styling*/
   
@@ -118,6 +125,7 @@
 	// height: 100%;
 	background-color: #fff;
 	
+
   }
   
   #carousel > div {
