--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -108,6 +108,9 @@
 	  text-align: center;
 	  background-color: #4182e4;
 	  color: #ffffff;
+	  background-image:  url("/images/test3.jpg");
+	  background-size: cover; 
+	  
   }
   #acronym {
 	font-size: 10vw;
