--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -60,6 +60,9 @@
 		flex-direction: row-reverse;
 	}
 }
+#map {
+	position: relative;
+}
 
 #carousel {
 	/* Ensure that the contents flow horizontally */
@@ -105,11 +108,19 @@
   }
   
   .Logo {
+	  position: relative;
+	  padding-top: 15%;
+	  padding-bottom: 15%;
+	  //padding: 100%;
 	  text-align: center;
+	  margin: auto;
 	  background-color: #4182e4;
 	  color: #ffffff;
 	  background-image:  url("/images/test3.jpg");
 	  background-size: cover; 
+	  width: 100%;
+	  height: 100%;
+	  overflow: hidden;
 	  
   }
   #acronym {
