--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,3 +1,6 @@
+html {
+	scroll-behavior: smooth;
+  }
 .bottom-cta {
 	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%);
 	color: #fff;
@@ -64,48 +67,8 @@
 	position: relative;
 }
 
-#carousel {
-	/* Ensure that the contents flow horizontally */
-	overflow-x: auto;
-	white-space: nowrap;
-	display: flex;
-  }
-  
-  #carousel.vertical {
-	flex-direction: column;
-  }
-  
-  /* 2018 spec - For Safari 11, Chrome 69+ */
-  #carousel.snap {
-	scroll-snap-type: x mandatory;
-	-webkit-overflow-scrolling: touch; /* Needed to work on iOS Safari */
-  }
-  
-  #carousel.snap > div {
-	scroll-snap-align: center;
-  }
-  
-  #carousel.snap.vertical {
-	flex-direction: column;
-	scroll-snap-type: y mandatory;
-  }
-  
-  
-  
-  /* 2015 spec - For Firefox, Edge, IE */
-  #carousel.snap {
-	scroll-snap-type: mandatory;
-	-ms-scroll-snap-type: mandatory;
-	scroll-snap-points-x: repeat(100%);
-	-ms-scroll-snap-points-x: repeat(100%);
-  }
-  
-  #carousel.snap.vertical {
-	scroll-snap-points-x: initial;
-	-ms-scroll-snap-points-x: initial;
-	scroll-snap-points-y: repeat(100%);
-	-ms-scroll-snap-points-y: repeat(100%);
-  }
+
+ 
   
   .Logo {
 	  position: relative;
@@ -129,48 +92,50 @@
   #words {
 	  font-size: 2vw;
   }
-  /* Image Carousel Styling*/
-  
+ 
 
-  
-  #carousel {
-	position: relative;
-	// width: 100%;
-	// height: 100%;
-	background-color: #fff;
-	
-
+  .scroll-down {
+    position: absolute;
+    left: 50%;
+    /* move arrow up and down */
+    bottom: 3%;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    z-index: 100;
+    text-decoration: none;
+    text-shadow: 0;
+    width: 20px;
+    height: 19px;
+    border-bottom: 2px solid #fff;
+    border-right: 2px solid #fff;
+    z-index: 9;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0%) rotate(45deg);
+    -moz-transform: translate(-50%, 0%) rotate(45deg);
+    transform: translate(-50%, 0%) rotate(45deg);
+    -webkit-animation: fade_move_down 3s ease-in-out infinite;
+    -moz-animation:    fade_move_down 3s ease-in-out infinite;
+    animation:         fade_move_down 3s ease-in-out infinite;
   }
   
-  #carousel > div {
-	min-width: 100%;
-	min-height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	color: #fff;
-
-  }
-  .carousel-photo {
-	min-width: 60vw;
-    max-width: 66vw;
-    max-height: 50vh;
-    min-height: 33vw;
-  }
   
-  #carousel-1 {
-	// background-color: #e34747;
+  /*animated scroll arrow animation*/
+  @-webkit-keyframes fade_move_down {
+    0%   { -webkit-transform:translate(0,-5px) rotate(45deg); opacity: 0;  }
+    50%  { opacity: 1;  }
+    100% { -webkit-transform:translate(0,5px) rotate(45deg); opacity: 0; }
   }
-  
-  #carousel-2 {
-	// background-color: #5ab92c;
+  @-moz-keyframes fade_move_down {
+    0%   { -moz-transform:translate(0,-5px) rotate(45deg); opacity: 0;  }
+    50%  { opacity: 1;  }
+    100% { -moz-transform:translate(0,5px) rotate(45deg); opacity: 0; }
   }
-  
-  #carousel-3 {
-	// background-color: #226de2;
+  @keyframes fade_move_down {
+    0%   { transform:translate(0,-5px) rotate(45deg); opacity: 0;  }
+    50%  { opacity: 1;  }
+    100% { transform:translate(0,5px) rotate(45deg); opacity: 0; }
   }
-  
 
   
 
