--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -1,38 +1,85 @@
 .staff {
-	padding: 0;
-	list-style: none;
-	@extend %flexbox;
-	@include flex-flow(wrap);
-	text-align: center;
-	li {
-		padding: 30px 20px;
-		box-sizing: border-box;
-		width: 100%;
+  padding: 0;
+  list-style: none;
+  @extend %flexbox;
+  @include flex-flow(wrap);
+  text-align: center;
+  li {
+    padding: 30px 20px;
+    box-sizing: border-box;
+    width: 100%;
 
-		@media #{$tablet} {
-			@include flex(1, 1, 45%);
-		}
+    @media #{$tablet} {
+      @include flex(1, 1, 45%);
+    }
 
-		@media #{$desktop} {
-			@include flex(1, 1, 29%);
-		}
+    @media #{$desktop} {
+      @include flex(1, 1, 29%);
+    }
+  }
 
-	}
+  .square-image {
+    width: 200px;
+    height: 200px;
+    img {
+      border-radius: 200px;
+    }
+  }
 
-	.square-image {
-		width: 200px;
-		height: 200px;
-			img {
-				border-radius: 200px;
-			}
-		}
+  .name {
+    font-size: 1.3em;
+    margin-top: 20px;
+  }
 
-	.name {
-		font-size: 1.3em;
-		margin-top: 20px;
-	}
+  .position {
+    color: #666;
+  }
+}
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  text-align: center;
+}
 
-	.position {
-		color: #666;
-	}
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+
+}
+.tabcontent {
+  animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
