--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -37,38 +37,44 @@
 }
 /* Style the tab */
 .tab {
+  font-size: 36px;
   overflow: hidden;
   text-align: center;
+
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
   background-color: inherit;
-
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+  //padding: 14px 16px;
   transition: 0.3s;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #ddd;
+	border-bottom: 3px solid #ddd;
+	padding-bottom: 5px;
+
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  border-bottom: 3px solid black;
+  padding-bottom: 5px;
 }
 
 /* Style the tab content */
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
 
+  border-top: none;
 }
 .tabcontent {
   animation: fadeEffect 1s; /* Fading effect takes 1 second */
