fixed up some tab issues in about page and worked on overall about page

--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -91,26 +91,37 @@
 }
 
 #Mission {
+
+}
+
+#mission-content {
   display: flex !important;
   flex-direction: row;
   padding-top: 5%;
+}
+
+#news-content {
+  background-color: #F2F2F2;
+}
+
+#news-image {
+  width : 100% !important;
 }
 
 .mission-photos {
   display: flex;
   flex-direction: column;
   padding-left: 10%;
-  
- 
 
-  
 }
 .mp1 {
-width: 60vh;
+// width: 60vh;
+width: 25vw;
 margin-right: 0px;
 }
 .mp2 {
-  width: 60vh;
+  // width: 60vh;
+  width: 25vw;
   padding-top: 10%;
   margin-right: 0px;
 }
@@ -119,5 +130,21 @@ margin-right: 0px;
 #mission-statement {
   display: flex;
 flex-direction: row;
-  
+
+}
+
+#structure-content {
+  display: flex !important;
+  flex-direction: row;
+  padding-top: 5%;
+}
+
+#structure-statement {
+  display: flex;
+flex-direction: row;
+
+}
+
+#committee-content {
+  background-color: #F2F2F2;
 }
