--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -154,7 +154,7 @@ body {
 
   width: 25vw;
   flex-wrap: wrap;
-  display: flex;
+  //display: flex;
 }
 
 .thumbnail {
@@ -180,10 +180,10 @@ body {
   background-color: #004477;
   border: none;
   color: #ffffff;
-  padding-right: 200px;
-  font-size: 28px;
-  padding: 20px;
-  width: 200px;
+  padding-right: 15%;
+  font-size: 1.5em;
+  padding: 5%;
+  width: 5em;
   transition: all 0.5s;
   cursor: pointer;
   margin-right: 19.5vh;
@@ -284,4 +284,8 @@ body {
 
 #Short-info {
   display: flex;
+}
+
+p {
+font-size: 1.125em;
 }
