finished lessons page made some changes in about page tho

--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -161,16 +161,16 @@ body {
   margin-top: 5%;
 }
 
-.npr {
+.left {
   margin-left: 7.5%;
 }
 
-.berk {
+.mid {
   margin-left: 5%;
   margin-right: 5%;
 }
 
-.sfgate {
+.right {
   margin-right: 7.5%;
 }
 
