--- a/_sass/lessons.scss
+++ b/_sass/lessons.scss
@@ -4,7 +4,7 @@
 
 div#lesson-container {
 	margin: auto;
-	justify-content: space-around;
+	// justify-content: space-around;
 	width:100%;
 	flex-wrap: wrap;
 	display: flex;
@@ -12,9 +12,45 @@ div#lesson-container {
 
 div#final-lesson-container {
 	margin: auto;
-	justify-content: space-around;
+	// justify-content: space-around;
 	width:100%;
 	flex-wrap: wrap;
 	display: flex;
 }
 
+.thumbnail {
+  margin-top: 5%;
+}
+
+.left {
+  margin-left: 7.5%;
+}
+
+.mid {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.right {
+  margin-right: 7.5%;
+}
+
+#lessons {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  background-color: "white";
+  width: 100vw;
+  position: relative;
+  margin-left: -50vw;
+  left: 50%;
+}
+
+#finlessons {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  background-color: #f2f2f2;
+  width: 100vw;
+  position: relative;
+  margin-left: -50vw;
+  left: 50%;
+}
