removed news page, fixed button fonts, removed extra lessons

--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -183,11 +183,12 @@ body {
   color: #ffffff;
   padding-right: 15%;
   font-size: 1.5em;
-  padding: 5%;
+  padding: 3% 5% 3% 5%;
   width: 5em;
   transition: all 0.5s;
   cursor: pointer;
   margin-right: 19.5vh;
+  
   filter: drop-shadow();
 }
 
