--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -12,8 +12,9 @@ body {
 }
 
 a {
-	color: #00a4ca;
-	text-decoration: none;
+	color: black;
+	text-decoration: underline;
+	font-weight: bold;
 }
 
 a:hover {
