--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap');
 html {
 	scroll-behavior: smooth;
   }
@@ -74,13 +75,13 @@ html {
 
 	  position: relative;
 	  padding-top: 15%;
-	  padding-bottom: 15%;
-	//    padding: 100%;
+	  padding-bottom: 19%;
 	  text-align: center;
 	  margin: auto;
-	  background-color: #4182e4;
+	  background-color: #004777;
 	  color: #ffffff;
-	  background-image: url("/images/test1.jpg");
+	  background-image: url("/images/group-pic.jpg");
+	  background-position: 5px -150px;
 	  background-size: cover;
 	  width: 100%;
 	  height: 100%;
@@ -88,24 +89,24 @@ html {
 
   }
   #acronym {
-	@import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap');
+	
 	font-family: 'Montserrat', sans-serif;
-	font-size: 200px;
+	font-size: 180px;
+
+
   }
   #words {
-	@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 	font-family: 'Source Sans Pro', sans-serif;
-	  font-size: 45px;
+	  font-size: 40px;
+	  margin-top: -2%;
   }
 
   .header {
-	@import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap');
 	font-family: 'Montserrat', sans-serif;
 	font-style: "bold";
 
   }
   .body {
-	@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 	font-family: 'Source Sans Pro', sans-serif;
 
   }
@@ -113,12 +114,10 @@ html {
 	  color: black;
 	  line-height: 1.4em;
 	  font-size: 24px;
-	  @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 	font-family: 'Source Sans Pro', sans-serif;
   }
   h2 {
 	  font-weight: 700;
-	  @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 	  font-family: 'Source Sans Pro', sans-serif;
   }
 
