better about badges

--- a/css/about.scss
+++ b/css/about.scss
@@ -124,6 +124,7 @@ footer:hover {
 }
 
 #staff-text {
+  padding-top: 2vh;
   transition-property: opacity;
   transition-duration: 0.2s;
   transition-timing-function: linear;
@@ -135,7 +136,7 @@ footer:hover {
   bottom: 0px;
   left: 0px;
   right: 0px;
-  background-color: rgba(51,125,255, 0.69);
+  background-color: rgba(23,87,130, 0.90);
 }
 
 .lesson-container {
