--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }}  Berkeley Engineers and Mentors. We are a student group acting independently of the University of California. We take full responsibility for our organization and this website. </p>
+				<p class="copyright" style="color:white;">&copy; {{ site.time | date: '%Y' }}  Berkeley Engineers and Mentors. We are a student group acting independently of the University of California. We take full responsibility for our organization and this website. </p>
 			</div>
 		</footer>
 		<script>
