--- a/_sass/lessons.scss
+++ b/_sass/lessons.scss
@@ -1,5 +1,11 @@
+img {
+	width: 15vw;
+	margin-right: 2vw;
+	margin-top: 0vh;
+}
+
 .thumbnail {
-	width: 25vw;
+	width: 15vw;
 }
 
 div#lesson-container {
@@ -39,9 +45,9 @@ div#final-lesson-container {
   padding-top: 5%;
   padding-bottom: 5%;
   background-color: "white";
-  width: 100vw;
+  width: 60vw;
   position: relative;
-  margin-left: -50vw;
+  margin-left: -30vw;
   left: 50%;
 }
 
@@ -49,8 +55,8 @@ div#final-lesson-container {
   padding-top: 5%;
   padding-bottom: 5%;
   background-color: #f2f2f2;
-  width: 100vw;
+  width: 60vw;
   position: relative;
-  margin-left: -50vw;
+  margin-left: -30vw;
   left: 50%;
 }
