--- a/_sass/lessons.scss
+++ b/_sass/lessons.scss
@@ -53,10 +53,16 @@ div#final-lesson-container {
 
 #finlessons {
   padding-top: 5%;
+ 
   padding-bottom: 5%;
   background-color: #f2f2f2;
-  width: 60vw;
+  width: 100vw;
   position: relative;
-  margin-left: -30vw;
+  margin-left: -50vw;
   left: 50%;
+}
+
+#final-lesson-container.lesson-container {
+  margin-left: 18vw;
+  width: 75%;
 }
