fixed logo on the about page.

--- a/css/about.scss
+++ b/css/about.scss
@@ -80,7 +80,7 @@ body {
 }
 
 .container {
-  padding-left: 0px;
+  // padding-left: 0px;
   padding-right: 0px;
   display: flex;
   flex-direction: column;
@@ -148,7 +148,7 @@ footer:hover {
 }
 .thumbnail {
   flex-basis: 300px;
-  
+
 }
 
 
