mobile quick-fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- commented out for mobile quick fix -->
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+		<!-- force desktop onto mobile -->
+		<meta name="viewport" content="width=1024">
 
 		{% seo %}
 		{% feed_meta %}
