general housekeeping for mobile display

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -5,6 +5,7 @@ html {
 html, body {
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 body {
@@ -53,4 +54,3 @@ p, address {
 	font-weight: 300;
 	line-height: 1.4em;
 }
-
