--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -219,7 +219,7 @@ span
 }
 
 .slide-image{
-	height: 60vh;
+	// height: 60vh; edited for now, let's try to keep all the images the same pixel by pixel size.
 	width: 40vw;
 	overflow: hidden;
 }
