join page cleanup

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -243,3 +243,32 @@ span
     display: inline;
   }
 }
+
+/*Join page styling*/
+#testimonial1 {
+	background-image: url("/images/icons/join1.png");
+	background-repeat: no-repeat;
+	background-position: 0%, 50%;
+	background-size: 25%;
+}
+
+#testimonial2 {
+	background-image: url("/images/icons/join2.png");
+	background-repeat: no-repeat;
+	background-position: 0%, 50%;
+	background-size: 25%;
+}
+
+#testimonial3 {
+	background-image: url("/images/icons/join3.png");
+	background-repeat: no-repeat;
+	background-position: 0%, 50%;
+	background-size: 25%;
+}
+
+#testimonial4 {
+	background-image: url("/images/icons/join4.png");
+	background-repeat: no-repeat;
+	background-position: 0%, 50%;
+	background-size: 25%;
+}
