--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -248,27 +248,34 @@ span
 #testimonial1 {
 	background-image: url("/images/icons/join1.png");
 	background-repeat: no-repeat;
-	background-position: 0%, 50%;
-	background-size: 25%;
+	background-position: left top;
+	background-size: 20%;
+	padding-bottom: 5%;
 }
 
 #testimonial2 {
 	background-image: url("/images/icons/join2.png");
 	background-repeat: no-repeat;
-	background-position: 0%, 50%;
-	background-size: 25%;
+	background-position:  left top;
+	background-size: 20%;
+	padding-bottom: 5%;
+
 }
 
 #testimonial3 {
 	background-image: url("/images/icons/join3.png");
 	background-repeat: no-repeat;
-	background-position: 0%, 50%;
-	background-size: 25%;
+	background-position: left top;
+	background-size: 20%;
+	padding-bottom: 5%;
+
 }
 
 #testimonial4 {
 	background-image: url("/images/icons/join4.png");
 	background-repeat: no-repeat;
-	background-position: 0%, 50%;
-	background-size: 25%;
+	background-position: left top;
+	background-size: 20%;
+	
+
 }
