fixed the title issue potentially

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<!-- force desktop onto mobile -->
 		<meta name="viewport" content="width=1024">
 
-		{% seo %}
+		{%- seo title=false -%}
 		{% feed_meta %}
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
