added a meta tag for the forms

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="referrer" content="origin">
 		<!-- commented out for mobile quick fix -->
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 		<!-- force desktop onto mobile -->
