--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -297,9 +297,7 @@ h2, .count, .tablinks {
 }
 
 #Short-info {
-  display: flex;
-  width: 60%;
-  margin-left: 15%;
+  display: inline-block;
 }
 a {
   width: 0px;
