--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap');
 .container, .text-container {
 	margin: 0 auto;
 	position: relative;
@@ -280,3 +283,10 @@ span
 
 
 }
+//Donut chart styling
+
+text{
+	font-family: 'Source Sans Pro', sans-serif !important;
+
+}
+
