--- a/_sass/lessons.scss
+++ b/_sass/lessons.scss
@@ -13,7 +13,7 @@
 
 div#lesson-container {
 	margin: auto;
-	justify-content: space-around;
+	justify-content: flex-start;
 	width:100%;
 	flex-wrap: wrap;
 	display: flex;
