--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
 		{% endif %}
 	</head>
 	<body>
-		<header>
+		<header style="padding:15px 0px;">
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="Hydra Logo" width="95" height="33"/></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo_22.png" alt="Hydra Logo" width="100" height="48"/></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
