--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -83,7 +83,7 @@ html {
 	  margin: auto;
 	  background-color: #004777;
 	  color: #ffffff;
-	  background-image: url("/images/fa19decal.jpg");
+	  background-image: url("images/group-photos/24SpringMO.jpg");
 	  background-size: cover;
 	  width: 100%;
 	  height: 100%;
