--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1,9 +1,9 @@
 ---
 ---
-@use "mixins/flexbox" as *;
-@use "mixins/columns" as *;
-@use "variables" as *;
-@use "elements" as *;
+@import "mixins/flexbox";
+@import "mixins/columns";
+@import "variables";
+@import "elements";
 @import "landing-page";
 @import "layout";
 @import "pricing";
